--- a/resources/assets/sass/pages/_map.scss
+++ b/resources/assets/sass/pages/_map.scss
@@ -1,5 +1,10 @@
 .map {
-    height: 600px;
+    
+    .container-fluid {
+        min-height: 100%;
+        height: 100%;
+    } 
+    
     .footer {
         margin-top: 0;
     }
